Restructured project to sub-projects.